# temporal_fusion_transformer

./: .dvcignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  HowTo.md  HowTos.md  Readme.md  clone_original_implementation.sh  colab_tpu.ipynb  data.dvc  datasets.dvc  env  job.sh  main.tf  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.txt  slurm_job.sh  tox.ini  weights.dvc
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: lint.yml  pypi_publish.yml  run_tests.yaml  run_tests.yml
colab/: Readme.md  main.tf  variables.tf
gcp/: main.tf  provider.tf  variables.tf
gcs/: main.tf
images/: base_image.def  image.def
notebooks/: .gitignore  aaa.ipynb  air_passengers.ipynb  bla.ipynb  colab_gpu.ipynb  colab_tpu.ipynb  electricity.ipynb  electricity_data.ipynb  electricity_feature_importnace.ipynb  electricity_v2.ipynb  example_electricity.ipynb  example_electricity_tpu.ipynb  favorita.ipynb  favorita_data.ipynb  inference_electricity.ipynb
scripts/: build_base_sif_image.sh  build_sif_image.sh  clone_original_implementation.sh  dataset_scripts.py  debug_nan.py  download_data.py  download_data.sh  download_data_v2.py  download_electricity_data.sh  download_favorita_data.sh  download_raw_data.sh  export_tensorflow_dataset.py  format_code.sh  main.py  main.tf  make_squash_fs_image.sh  make_squashfs_image.sh  optimize_keras_hyperparams.py  run_job.sh  slurm_job.sh  sort_imports.sh  tf_dataset.py  train_keras_model.py  train_model.py  upload_data_to_gdrive.py
src/temporal_fusion_transformer/: __init__.py
temporal_fusion_transformer/: __init__.py  config.py  data_types.py  debug_nan.py  experiments.py  inference.py  main.py  modeling.py  plotting.py  quantile_loss.py  train_lib.py  utils.py
temporal_fusion_transformer/configs/: air_passengers.toml  electricity.toml  favorita.toml
temporal_fusion_transformer/data_formatters/: data_formatter.py  electricity.py
temporal_fusion_transformer/experiments/: electricity.py  experiment.py
temporal_fusion_transformer/flax_/: __init__.py  modeling.py  quantile_loss.py  train_lib.py
temporal_fusion_transformer/scripts/: dataset.py  download_data.py  model.py
temporal_fusion_transformer/src/: config.py  config_dict.py  dataset_scripts.py  experiments.py  global_config.py  hyperparams.py  hyperparams.py.dist  inference.py  lib_types.py  loss_fn.py  metrics.py  modeling.py  modeling_flax.py  ops.py  plotting.py  quantile_loss.py  quantile_metrics.py  (+11 more)
test/: experiments_test.py  modeling_test.py  train_lib_test.py
test_data/: dataset_spec.pb
tests/: __init__.py  conftest.py  constants.py  dataset_tests.py  experiments_test.py  layers_test.py  loss_fn_test.py  metrics_test.py  modeling_flax_test.py  modeling_test.py  modeling_tf_test.py  plotting_test.py  quantile_loss_test.py  test_preprocessor.py  tft_model_test.py  train_lib_test.py  training_flax_test.py  utils_test.py
(+97 files in other folders)
