[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temporal_fusion_transformer"
version = "0.0.1"
description = "JAX re-write of Temporal Fusion Transformer"
readme = "Readme.md"
requires-python = ">=3.10"
authors = [
    { name = "Artem Sereda", email = "artem.sereda.tub@gmail.com" },
]
maintainers = [
    { name = "Artem Sereda", email = "artem.sereda.tub@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "jax~=0.4.25",
    "jaxlib~=0.4.25",
    "polars~=0.20.15",
    "flax~=0.8.1",
]
[project.optional-dependencies]
dev = [
    "scikit-learn",
    "pandas",
    "pyarrow",
    "matplotlib",
    "seaborn",
    "holoviews",
    "hvplot",
    "bokeh",
    "black[jupyter]",
    "ruff",
    "pytest",
    "mypy",
    "jupyter"
]


[project.urls]
"Homepage" = "https://github.com/aaarrti/temporal_fusion_transformer"



[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.hatch.version]
path = 'src/temporal_fusion_transformer/__version__.py'

[tool.hatch.envs.default]
python = "3.11"
dependecies = [
    "temporal_fusion_transformer[dev]"
]
